--- a/css/globals.css
+++ b/css/globals.css
@@ -4,3 +4,22 @@ body {
     padding-bottom: 60px;
     font-weight: 600;
 }
+
+main {
+    animation: .5s bodyPopIn ease-in-out;
+}
+
+@keyframes bodyPopIn {
+    from{
+        opacity: 0;
+        transform: translateY(2px);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+* {
+    box-sizing: border-box;
+}
